@@ -16,6 +16,7 @@ Version 1.1.3 to be released
 - Bug #1231: CPgsqlColumnSchema would incorrectly parse the default value with some complex expressions (Qiang)
 - Bug #1227: CActiveRecord::resetScope doesn't work with default scope (Sam Dark)
 - Bug #1241: DB search parameters should have special characters escaped (Qiang)
+- Enh #862: Enhanced CSort virtual attributes and support for related tables (Qiang)
 - Enh #1158: Added translations in Latvian (lafriks)
 - Enh #1166: Added CActiveRecord::setOldPrimaryKey (Qiang)
 - Enh #1174: AR's count() now generates more reasonable SQL statement when 'group' option is specified (Qiang)
